Agent query: Is the Flask application running and accessible? Can you upload an audio file and get a transcription?

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Audio Transcription Service</h1>
         <form id="uploadForm" enctype="multipart/form-data">
-            <input type="file" id="audioFile" name="file" accept=".wav,.mp3,.ogg,.flac" required>
+            <input type="file" id="audioFile" name="file" accept=".wav,.mp3,.ogg,.flac,.aac,.m4a,.wma,.aiff" required>
             <button type="submit">Transcribe</button>
         </form>
         <div id="progress" class="hidden">
